Fixed minor z-indexing issue w/new epic thumb implementation (#166)

--- a/framework/assets/css/themeblvd.css
+++ b/framework/assets/css/themeblvd.css
@@ -5526,7 +5526,7 @@ body.mobile .tb-bg-video {
 		-webkit-transform: translate(-50%, -50%);
 		transform: translate(-50%, -50%);
 		width: 100%;
-		z-index: 2;
+		z-index: 1;
 	}
 	.epic-thumb .epic-thumb-header {
 		max-width: 1000px;
